change hamburger to a tag, fix skip link, fix navigation css visibility

--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -21,13 +21,11 @@ header {
     top: 0;
     background: #fff;
     box-shadow: 0px 1px 10px rgb(214, 214, 214);
-    z-index: 999;
 }
 
 nav {
     margin: auto;
     width: 90%;
-    z-index: 100;
 }
 
 .nav {
@@ -103,6 +101,7 @@ nav {
         justify-content: space-evenly;
         background-color: #000;
         transform: translateY(-100%);
+        visibility: hidden;
         transition: all 1s;
         position: absolute;
         top: 0;
@@ -111,6 +110,7 @@ nav {
 
     .slide {
         transform: translateY(0%);
+        visibility: visible;
     }
 
     .nav ul {
@@ -154,7 +154,6 @@ nav {
         top: 0;
         right: 0;
         margin: 20px;
-        z-index: 999;
         align-items: center;
     }
 
